Fixing searchicon overflow

--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,6 @@ a:hover {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
     width: 100%;
     overflow: hidden;
     position: relative;
